--- a/index.html
+++ b/index.html
@@ -117,11 +117,21 @@
         .nav-link {
             color: #f3e8ff; /* Light purple for contrast */
             transition: color 0.3s;
-            /* Applied Sacramento for navigation links */
             font-family: 'Sacramento', cursive;
-            font-size: 1.5rem; /* Increased font size for clarity */
             font-weight: 700; /* Attempt to make it bolder */
             text-decoration: none; /* Ensure no underline */
+            font-size: 1.2rem; /* Default size for very small screens */
+        }
+        /* Responsive font sizes for nav links */
+        @media (min-width: 640px) { /* sm breakpoint */
+            .nav-link {
+                font-size: 1.35rem;
+            }
+        }
+        @media (min-width: 768px) { /* md breakpoint */
+            .nav-link {
+                font-size: 1.5rem; /* Original size on md and larger screens */
+            }
         }
         .nav-link:hover {
             color: #d8b4fe; /* Lighter purple on hover */
@@ -218,8 +228,10 @@
     <!-- Navigation Bar -->
     <nav class="bg-purple-600 text-white py-4 sticky top-0 z-10 shadow-md">
         <div class="max-w-6xl mx-auto px-4 flex justify-between items-center">
-            <h1 class="text-2xl font-bold">The Embrowned Lilac</h1>
-            <ul class="flex space-x-6">
+            <!-- Responsive font size for nav title -->
+            <h1 class="text-xl sm:text-2xl font-bold">The Embrowned Lilac</h1>
+            <!-- Responsive spacing for nav links -->
+            <ul class="flex space-x-2 sm:space-x-4 md:space-x-6">
                 <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="about.html" class="nav-link">About Me</a></li>
                 <li><a href="tech.html" class="nav-link">Tech</a></li>
